--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           I’m constantly learning and pushing my boundaries, aiming to turn ideas into smooth digital experiences. Whether it’s bringing a design to life or fine-tuning every pixel, I take pride in the details.
           
           Let’s connect and create something awesome!</p>
-        <a href="#" class="cta">Download Resume</a>
+        <a href="C:\Users\Kavyashree N\Desktop\github project\ResponsivePortfolio\KAVYASHREEN.pdf" class="cta" download="">Download Resume</a>
       </div>
     </div>
   </section>
@@ -193,8 +193,8 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>kavyashree3321@gmail.com</h2>
-            <h2>kavyashree3321n@gmail.com</h2>
+          <a href="https://workspace.google.com/intl/en-US/gmail/" style="color: black;">kavyashree3321@gmail.com</a>
+          <a href="https://workspace.google.com/intl/en-US/gmail/" style="color: black;">kavyashreen3321@gmail.com</a>
           </div>
         </div>
         <div class="contact-item">
@@ -218,16 +218,16 @@
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="https://www.facebook.com/"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="https://www.instagram.com/"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/color/96/twitter--v1.png" /></a>
+          <a href="https://x.com/"><img src="https://img.icons8.com/color/96/twitter--v1.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+          <a href="https://www.behance.net/"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
         </div>
       </div>
       <p>Copyright © 2025 Kavyashree N. All rights reserved</p>
