--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           I’m constantly learning and pushing my boundaries, aiming to turn ideas into smooth digital experiences. Whether it’s bringing a design to life or fine-tuning every pixel, I take pride in the details.
           
           Let’s connect and create something awesome!</p>
-        <a href="C:\Users\Kavyashree N\Desktop\github project\ResponsivePortfolio\KAVYASHREEN.pdf" class="cta" download="">Download Resume</a>
+        <a href="C:\Users\Kavyashree N\Desktop\github project\ResponsivePortfolio\KAVYASHREEN.pdf" class="cta" download>Download Resume</a>
       </div>
     </div>
   </section>
@@ -194,7 +194,7 @@
           <div class="contact-info">
             <h1>Email</h1>
           <a href="https://workspace.google.com/intl/en-US/gmail/" style="color: black;">kavyashree3321@gmail.com</a>
-          <a href="https://workspace.google.com/intl/en-US/gmail/" style="color: black;">kavyashreen3321@gmail.com</a>
+          <a href="https://workspace.google.com/intl/en-US/gmail/" style="color: black;;">kavyashreen3321@gmail.com</a>
           </div>
         </div>
         <div class="contact-item">
