--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           I’m constantly learning and pushing my boundaries, aiming to turn ideas into smooth digital experiences. Whether it’s bringing a design to life or fine-tuning every pixel, I take pride in the details.
           
           Let’s connect and create something awesome!</p>
-        <a href="C:\Users\Kavyashree N\Desktop\github project\ResponsivePortfolio\KAVYASHREEN.pdf" class="cta" download>Download Resume</a>
+        <a href="KAVYASHREEN.pdf" class="cta" download>Download Resume</a>
       </div>
     </div>
   </section>
