--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <!-- Header -->
+  
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
@@ -33,10 +33,9 @@
       </div>
     </div>
   </section>
-  <!-- End Header -->
 
 
-  <!-- Hero Section  -->
+
   <section id="hero">
     <div class="hero container">
       <div>
@@ -47,9 +46,7 @@
       </div>
     </div>
   </section>
-  <!-- End Hero Section  -->
-
-  <!-- Service Section -->
+ 
   <section id="services">
     <div class="services container">
       <div class="service-top">
@@ -84,9 +81,8 @@
       </div>
     </div>
   </section>
-  <!-- End Service Section -->
+  
 
-  <!-- Projects Section -->
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -148,9 +144,7 @@
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
-
-  <!-- About Section -->
+ 
   <section id="about">
     <div class="about container">
       <div class="col-left">
@@ -172,9 +166,7 @@
       </div>
     </div>
   </section>
-  <!-- End About Section -->
-
-  <!-- Contact Section -->
+ 
   <section id="contact">
     <div class="contact container">
       <div>
@@ -207,9 +199,7 @@
       </div>
     </div>
   </section>
-  <!-- End Contact Section -->
-
-  <!-- Footer -->
+ 
   <section id="footer">
     <div class="footer container">
       <div class="brand">
@@ -233,8 +223,8 @@
       <p>Copyright © 2025 Kavyashree N. All rights reserved</p>
     </div>
   </section>
-  <!-- End Footer -->
-  <script src="./app.js"></script>
+
+  <!-- <script src="./app.js"></script> -->
 </body>
 
 </html>
