--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
+            <li><a href="services" data-after="Service">Services</a></li>
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -224,7 +224,7 @@
     </div>
   </section>
 
-  <!-- <script src="./app.js"></script> -->
+  <script src="./app.js"></script>
 </body>
 
 </html>
